Product Page added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-items">
-          <div class="logo">Blitzfa</div>
+          <div class="logo"><a href="../index.html">Blitzfa</a></div>
           <ul>
             <li><a href="#about">About Us</a></li>
             <!-- <li><a href="#products">Products</a></li> -->
@@ -21,7 +21,7 @@
                 <!-- <i class="fa fa-caret-down"></i> -->
               </button>
               <div class="dropdown-content">
-                <a href="#">Indusvale</a>
+                <a href="/products/indusvale.html">Indusvale</a>
               </div>
             </li>
 
@@ -69,7 +69,9 @@
               join us in connecting with the world like never before, living
               life like never before, exploring like never before.
             </p>
-            <button class="hero-button">Explore Products</button>
+            <button class="hero-button">
+              <a href="#products">Explore Products</a>
+            </button>
           </div>
         </div>
       </div>
@@ -141,7 +143,7 @@
                 how they do business, and everything under the sun.
               </p>
             </div>
-            <button>Know more</button>
+            <button><a href="./products/indusvale.html">Know more</a></button>
             <!-- <div class="know-more">
               <div style="text-align: end"><a href="#">Know more</a></div>
             </div> -->
@@ -195,7 +197,6 @@
       dropdown.addEventListener("click", () => {
         dropdown.classList.toggle("active");
       });
-      
     </script>
   </body>
 </html>
