Updated index.html and indusvale.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-items">
-          <div class="logo"><a href="../index.html">Blitzfa</a></div>
+          <div class="logo"><a href="/">Blitzfa</a></div>
           <ul>
             <li><a href="#about">About Us</a></li>
             <!-- <li><a href="#products">Products</a></li> -->
@@ -198,6 +198,5 @@
         dropdown.classList.toggle("active");
       });
     </script>
-    
   </body>
 </html>
