--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-items">
-          <div class="logo"><a href="../index.html">Blitzfa</a></div>
+          <div class="logo"><a href="/">Blitzfa</a></div>
           <ul>
             <li><a href="../index.html#about">About Us</a></li>
             <!-- <li><a href="#products">Products</a></li> -->
