--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Blitzfa E-commerce</title>
   </head>
@@ -18,7 +22,7 @@
             <li class="dropdown">
               <button class="dropbtn">
                 products
-                <!-- <i class="fa fa-caret-down"></i> -->
+                <i class="fa fa-caret-down" aria-hidden="true"></i>
               </button>
               <div class="dropdown-content">
                 <a href="/products/indusvale.html">Indusvale</a>
@@ -185,6 +189,69 @@
         </form>
       </div>
     </section>
+    <footer class="footer">
+      <div class="inner-footer">
+        <!--  for company name and description -->
+        <div class="footer-items">
+          <h1>Blitzfa</h1>
+          <p>Design Your Living</p>
+          <!-- <div class="social-media">
+            <a class="social-media-icon"
+              ><i class="fab fa-google" aria-hidden="true"></i
+            ></a>
+            <a class="social-media-icon"
+              ><i class="fab fa-instagram" aria-hidden="true"></i
+            ></a>
+          </div> -->
+        </div>
+
+        <!--  for quick links  -->
+        <div class="footer-items">
+          <h3>Quick Links</h3>
+          <div class="border1"></div>
+          <!--for the underline -->
+          <ul>
+            <a href="/"><li>Home</li></a>
+            <a href="#about"><li>About Us</li></a>
+            <a href="#products"><li>Products</li></a>
+            <a href="#contact"><li>Contact Us</li></a>
+          </ul>
+        </div>
+
+        <!--  for some other links -->
+        <div class="footer-items">
+          <h3>Products</h3>
+          <div class="border1"></div>
+          <!--for the underline -->
+          <ul>
+            <a href="./products/indusvale.html"><li>Indusvale</li></a>
+          </ul>
+        </div>
+
+        <!--  for contact us info -->
+        <div class="footer-items">
+          <h3>Contact us</h3>
+          <div class="border1"></div>
+          <ul>
+            <li>
+              <i class="fa fa-map-marker" aria-hidden="true"></i> Mumbai,
+              Maharashtra
+            </li>
+            <li>
+              <i class="fa fa-envelope" aria-hidden="true"></i
+              >ecommerce@blitzfa.org
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!--   Footer Bottom start  -->
+      <div class="footer-bottom">Copyright &copy; Blitzfa</div>
+    </footer>
+
+    <!--   Footer Bottom end -->
+
+    <!--   FOOTER END -->
     <script>
       const hamburger = document.querySelector(".hamburger");
       const navItems = document.querySelector(".nav-items");
