--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="../style.css" />
     <title>Indusvale</title>
   </head>
@@ -114,6 +118,67 @@
         </p>
       </div>
     </div>
+    <footer class="footer">
+      <div class="inner-footer">
+        <!--  for company name and description -->
+        <div class="footer-items">
+          <h1>Blitzfa</h1>
+          <p>Design Your Living</p>
+          <!-- <div class="social-media">
+            <a class="social-media-icon"
+              ><i class="fab fa-google" aria-hidden="true"></i
+            ></a>
+            <a class="social-media-icon"
+              ><i class="fab fa-instagram" aria-hidden="true"></i
+            ></a>
+          </div> -->
+        </div>
+
+        <!--  for quick links  -->
+        <div class="footer-items">
+          <h3>Quick Links</h3>
+          <div class="border1"></div>
+          <!--for the underline -->
+          <ul>
+            <a href="#"><li>Home</li></a>
+            <a href="../index.html#about"><li>About Us</li></a>
+            <a href="../index.html#products"><li>Products</li></a>
+            <a href="../index.html#contact"><li>Contact Us</li></a>
+          </ul>
+        </div>
+
+        <!--  for some other links -->
+        <div class="footer-items">
+          <h3>Products</h3>
+          <div class="border1"></div>
+          <!--for the underline -->
+          <ul>
+            <a href="./products/indusvale.html"><li>Indusvale</li></a>
+          </ul>
+        </div>
+
+        <!--  for contact us info -->
+        <div class="footer-items">
+          <h3>Contact us</h3>
+          <div class="border1"></div>
+          <ul>
+            <li>
+              <i class="fa fa-map-marker" aria-hidden="true"></i> Mumbai,
+              Maharashtra
+            </li>
+            <li>
+              <i class="fa fa-envelope" aria-hidden="true"></i
+              >ecommerce@blitzfa.org
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!--   Footer Bottom start  -->
+      <div class="footer-bottom">Copyright &copy; Blitzfa.</div>
+    </footer>
+
+    <!--   Footer Bottom end -->
     <script>
       const hamburger = document.querySelector(".hamburger");
       const navItems = document.querySelector(".nav-items");
