Quote and other minor fixes

--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -16,20 +16,20 @@
         <div class="nav-items">
           <div class="logo"><a href="/">Blitzfa</a></div>
           <ul>
-            <li><a href="../index.html#about">About Us</a></li>
+            <li><a href="/#about">About Us</a></li>
             <!-- <li><a href="#products">Products</a></li> -->
 
             <li class="dropdown">
               <button class="dropbtn">
                 products
-                <!-- <i class="fa fa-caret-down"></i> -->
+                <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
                 <a href="../products/indusvale.html">Indusvale</a>
               </div>
             </li>
 
-            <li><a href="../index.html#contact">Contact Us</a></li>
+            <li><a href="/#contact">Contact Us</a></li>
           </ul>
           <button class="hamburger">
             <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
@@ -63,26 +63,31 @@
         </div>
       </div>
     </nav>
+
     <div class="main-img">
       <div class="container">
         <img src="../images/indusvale.png" />
       </div>
     </div>
-
     <h1 class="container" style="text-align: center">
       <a href="https://2f12d9-2.myshopify.com/">IndusVale</a>
     </h1>
     <div class="quote-parent">
       <div class="container">
         <div class="quote-container">
+          <span class="apostrophe">“</span>
           <p class="quote">
-            <span class="apostrophe">“</span>
             As firm believers in the 'Make in India' movement, we want to set
             the standards not just for 'Make in India' but also for 'Innovate in
             India’
-            <span class="apostrophe">”</span>
           </p>
         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="indusvale-images">
+        <div class="indusvale-image"></div>
+        <div class="indusvale-image"></div>
       </div>
     </div>
     <div class="product--desc">
@@ -99,12 +104,7 @@
         </p>
       </div>
     </div>
-    <div class="container">
-      <div class="indusvale-images">
-        <div class="indusvale-image"></div>
-        <div class="indusvale-image"></div>
-      </div>
-    </div>
+
     <div class="product--desc">
       <div class="container">
         <p>
@@ -141,9 +141,9 @@
           <!--for the underline -->
           <ul>
             <a href="#"><li>Home</li></a>
-            <a href="../index.html#about"><li>About Us</li></a>
-            <a href="../index.html#products"><li>Products</li></a>
-            <a href="../index.html#contact"><li>Contact Us</li></a>
+            <li><a href="/#about">About Us</a></li>
+            <li><a href="/#products">Products</a></li>
+            <li><a href="/#contact">Contact Us</a></li>
           </ul>
         </div>
 
@@ -153,7 +153,7 @@
           <div class="border1"></div>
           <!--for the underline -->
           <ul>
-            <a href="./products/indusvale.html"><li>Indusvale</li></a>
+            <li><a href="./products/indusvale.html">Indusvale</a></li>
           </ul>
         </div>
 
