changed product layout

--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -84,40 +84,41 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="indusvale-images">
-        <div class="indusvale-image"></div>
-        <div class="indusvale-image"></div>
+
+    <div class="product-info">
+      <div class="container">
+        <div class="row">
+          <div class="indusvale-image"></div>
+          <p class="product--desc">
+            IndusVale, found its origin as the brainchild of a group of
+            individuals that found their passion is disrupting the idea of
+            lifestyle from the lenses of an Indian brand. A brand that conveys
+            the picture of India from what was, what is, and what it ought to
+            be. Adopting the name from Indus Valley Civilization, IndusVale is
+            about the people, and how they express themselves in their colors,
+            in their clothing, in their lifestyle, how they connect, how they do
+            business, and everything under the sun.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="product--desc">
+    <div class="product-info">
       <div class="container">
-        <p>
-          IndusVale, found its origin as the brainchild of a group of
-          individuals that found their passion is disrupting the idea of
-          lifestyle from the lenses of an Indian brand. A brand that conveys the
-          picture of India from what was, what is, and what it ought to be.
-          Adopting the name from Indus Valley Civilization, IndusVale is about
-          the people, and how they express themselves in their colors, in their
-          clothing, in their lifestyle, how they connect, how they do business,
-          and everything under the sun.
-        </p>
+        <div class="row reverse">
+          <div class="indusvale-image"></div>
+          <p class="product--desc">
+            So when IndusVale wanted to develop apparels and lifestyle products,
+            we understood that there were two ends to it. One was the side seen
+            in fashion shows, not robust, very delicate, cannot be worn
+            everyday. The other was our everyday side, that had not seen any
+            innovation in design or in utility in decades. And we decided to
+            change the landscape. Introducing AI to innovate in our designs, and
+            research for patent development in utility and material itself.
+          </p>
+        </div>
       </div>
     </div>
 
-    <div class="product--desc">
-      <div class="container">
-        <p>
-          So when IndusVale wanted to develop apparels and lifestyle products,
-          we understood that there were two ends to it. One was the side seen in
-          fashion shows, not robust, very delicate, cannot be worn everyday. The
-          other was our everyday side, that had not seen any innovation in
-          design or in utility in decades. And we decided to change the
-          landscape. Introducing AI to innovate in our designs, and research for
-          patent development in utility and material itself.
-        </p>
-      </div>
-    </div>
     <footer class="footer">
       <div class="inner-footer">
         <!--  for company name and description -->
@@ -140,7 +141,7 @@
           <div class="border1"></div>
           <!--for the underline -->
           <ul>
-            <a href="#"><li>Home</li></a>
+            <a href="/"><li>Home</li></a>
             <li><a href="/#about">About Us</a></li>
             <li><a href="/#products">Products</a></li>
             <li><a href="/#contact">Contact Us</a></li>
@@ -153,7 +154,7 @@
           <div class="border1"></div>
           <!--for the underline -->
           <ul>
-            <li><a href="./products/indusvale.html">Indusvale</a></li>
+            <li><a href="#">Indusvale</a></li>
           </ul>
         </div>
 
