--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -14,7 +14,18 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-items">
-          <div class="logo"><a href="/">Blitzfa</a></div>
+          <div class="logo">
+            <a
+              href="/"
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+              "
+              ><img class="logo-img" src="../images/logo.png" /> Blitzfa
+            </a>
+          </div>
           <ul>
             <li><a href="/#about">About Us</a></li>
             <!-- <li><a href="#products">Products</a></li> -->
@@ -123,7 +134,16 @@
       <div class="inner-footer">
         <!--  for company name and description -->
         <div class="footer-items">
-          <h1>Blitzfa</h1>
+          <h1
+            style="
+              justify-content: start;
+              display: flex;
+              align-items: center;
+              gap: 10px;
+            "
+          >
+            Blitzfa <img class="logo-img" src="../images/logo.png" />
+          </h1>
           <p>Design Your Living</p>
           <!-- <div class="social-media">
             <a class="social-media-icon"
