--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -142,7 +142,7 @@
               gap: 10px;
             "
           >
-            Blitzfa <img class="logo-img" src="../images/logo.png" />
+            <img class="logo-img" src="../images/logo.png" /> Blitzfa
           </h1>
           <p>Design Your Living</p>
           <!-- <div class="social-media">
