--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -32,7 +32,7 @@
 
             <li class="dropdown">
               <button class="dropbtn">
-                products
+                Products
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
@@ -101,14 +101,14 @@
         <div class="row">
           <div class="indusvale-image"></div>
           <p class="product--desc">
-            IndusVale, found its origin as the brainchild of a group of
-            individuals that found their passion is disrupting the idea of
-            lifestyle from the lenses of an Indian brand. A brand that conveys
-            the picture of India from what was, what is, and what it ought to
-            be. Adopting the name from Indus Valley Civilization, IndusVale is
-            about the people, and how they express themselves in their colors,
-            in their clothing, in their lifestyle, how they connect, how they do
-            business, and everything under the sun.
+            IndusVale, found its origin as the brainchild of Indians passionate
+            about disrupting the idea of lifestyle from the lenses of a
+            futuristic Indian brand. A brand that conveys the picture of India
+            from what was, what is, and what it ought to be. Adopting the name
+            from Indus Valley Civilization, IndusVale is about the people, and
+            how they express themselves in their colors, in their clothing, in
+            their lifestyle, how they connect, how they do business, and
+            everything that makes their life worthwhile.
           </p>
         </div>
       </div>
@@ -116,15 +116,18 @@
     <div class="product-info">
       <div class="container">
         <div class="row reverse">
-          <div class="indusvale-image"></div>
+          <img
+            class="indusvale-image"
+            src="../images/indusvale-second-image.png"
+          />
           <p class="product--desc">
-            So when IndusVale wanted to develop apparels and lifestyle products,
-            we understood that there were two ends to it. One was the side seen
-            in fashion shows, not robust, very delicate, cannot be worn
-            everyday. The other was our everyday side, that had not seen any
-            innovation in design or in utility in decades. And we decided to
-            change the landscape. Introducing AI to innovate in our designs, and
-            research for patent development in utility and material itself.
+            So when IndusVale wants to develop lifestype products, we understand
+            that we need to have keen focus on bringing innovative products. We
+            want to change the landscape in design and manufacturing when we
+            bring a platform to our people. We do this by introducing artificial
+            intelligence as a key component in bringing design innovation and
+            continuous focus on patent development for the utility and materials
+            of products themselves.
           </p>
         </div>
       </div>
